FIx large sponsor logo centering on small screens

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -248,7 +248,8 @@ p
     margin-bottom: 10px
 
   &.sponsor-large
-    flex-basis: 600px
+    flex: 1 1 600px
+    min-width: 300px // same size as regular sponsor flex-basis
     img
       max-width: 350px
 
